# cpp_practice

./: README.md
src/lib/: CMakeLists.txt  dll_export.h  dummy.cpp  dummy.h  stdafx.h
src/main/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  dummy_test.cpp  stdafx.h
