set(LIB_SRCS
    ${CMAKE_CURRENT_LIST_DIR}/dummy.cpp
)

set(LIB_HEADERS
    ${CMAKE_CURRENT_LIST_DIR}/dummy.h
)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_library(lib SHARED ${LIB_SRCS} ${LIB_HEADERS})

set_property(TARGET lib PROPERTY CXX_STANDARD 17)
set_property(TARGET lib PROPERTY CXX_STANDARD_REQUIRED ON)

target_include_directories(lib PUBLIC ${CMAKE_CURRENT_LIST_DIR})